--- a/src/lib/css/mavon-editor.styl
+++ b/src/lib/css/mavon-editor.styl
@@ -25,8 +25,10 @@
       height auto
       z-index 1501
     .v-note-op
+      position fixed
+      bottom 0px
       padding 1px
-      width 100%
+      width 96%
       display flex
       white-space pre-line
       flex none
