--- a/src/lib/css/markdown.css
+++ b/src/lib/css/markdown.css
@@ -6,11 +6,11 @@
 .markdown-body {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    line-height: 1.5;
+    line-height: 2.1;
     color: #24292e;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 2.1;
     word-wrap: break-word;
 }
 
@@ -170,11 +170,6 @@
     font-weight: bolder;
 }
 
-.markdown-body h1 {
-    font-size: 2.4em;
-    margin: 0.67em 0;
-}
-
 .markdown-body img {
     border-style: none;
 }
@@ -230,7 +225,7 @@
 }
 
 .markdown-body strong {
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .markdown-body hr {
@@ -271,35 +266,6 @@
 .markdown-body h6 {
     margin-top: 0;
     margin-bottom: 0;
-}
-
-.markdown-body h1 {
-    font-size: 36px;
-    font-weight: 600;
-}
-.markdown-body h2 {
-    font-size: 28px;
-    font-weight: 600;
-}
-
-.markdown-body h3 {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.markdown-body h4 {
-    font-size: 18px;
-    font-weight: 600;
-}
-
-.markdown-body h5 {
-    font-size: 14px;
-    font-weight: 600;
-}
-
-.markdown-body h6 {
-    font-size: 12px;
-    font-weight: 600;
 }
 
 .markdown-body p {
@@ -465,8 +431,8 @@
 .markdown-body h6 {
     margin-top: 20px;
     margin-bottom: 12px;
-    font-weight: 600;
-    line-height: 1.25;
+    /* font-weight: 400; */
+    line-height: 1.7;
 }
 
 .markdown-body h1 .octicon-link,
@@ -500,31 +466,37 @@
 
 .markdown-body h1 {
     padding-bottom: 0.3em;
-    font-size: 2.2em;
+    font-size: 1.8em;
     border-bottom: 1px solid #eaecef;
+    font-weight: 400;
 }
 
 .markdown-body h2 {
     padding-bottom: 0.3em;
-    font-size: 1.8em;
+    font-size: 1.7em;
     border-bottom: 1px solid #eaecef;
+    font-weight: 400;
 }
 
 .markdown-body h3 {
     font-size: 1.5em;
+    font-weight: 500;
 }
 
 .markdown-body h4 {
     font-size: 1.2em;
+    font-weight: 500;
 }
 
 .markdown-body h5 {
     font-size: 16px;
+    font-weight: 500;
 }
 
 .markdown-body h6 {
     font-size: 14px;
     color: #6a737d;
+    font-weight: 500;
 }
 
 .markdown-body ul,
@@ -640,7 +612,7 @@
     padding: 16px;
     overflow: auto;
     font-size: 85%;
-    line-height: 1.45;
+    line-height: 1.9;
     border-radius: 3px;
 }
 
