--- a/src/lib/css/mavon-editor.styl
+++ b/src/lib/css/mavon-editor.styl
@@ -11,7 +11,7 @@
     display flex
     flex-direction column
     background-color #fff
-    z-index 1500
+    z-index 150
     text-align left
     border border-color
     border-radius 4px
@@ -23,10 +23,13 @@
       top 0
       margin 0
       height auto
-      z-index 1501
+      z-index 151
     .v-note-op
       padding 1px
+      width 100%
+      display flex
       white-space pre-line
+      flex none
       min-height op-height
       user-select none
       border-bottom border-color
@@ -106,7 +109,7 @@
           display none
         .content-div
           width 100%
-          padding 20px 25px
+          padding 20px 5px
           box-sizing border-box
           outline 0 none
           border none !important
@@ -114,7 +117,7 @@
           font-size 16px
         .content-input-wrapper
           width 100%
-          padding 8px 25px 15px 25px
+          padding 8px 5px 15px 5px
       .v-note-show
         flex 0 0 50%
         width 50%
@@ -127,7 +130,7 @@
         .v-show-content, .v-show-content-html
           width 100%
           height 100%
-          padding 8px 25px 15px 25px
+          padding 8px 5px 15px 5px
           overflow-y auto
           box-sizing border-box
           overflow-x hidden
@@ -175,7 +178,7 @@
           padding 8px 0
           h1, h2, h3, h4, h5, h6
             margin 2px 0
-            font-weight 500
+            font-weight 400
             font-size 17px
             color #2185d0
             cursor pointer
@@ -225,7 +228,7 @@
   top 0
   bottom 0
   background rgba(0, 0, 0, 0.7)
-  z-index 1600
+  z-index 160
   transition all 0.1s linear 0s
   &.fade-enter-active, &.fade-leave-active
     opacity 1
@@ -273,7 +276,7 @@
   top 0
   bottom 0
   background rgba(0, 0, 0, 0.7)
-  z-index 1600
+  z-index 160
   transition all 0.1s linear 0s
   &.fade-enter-active, &.fade-leave-active
     opacity 1
